objects/ssot__AssessmentTaskContentDocument__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentTaskId__c</fullName>
        <label>Assessment Task</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentContextId__c</fullName>
        <label>Content Context</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentContextObject__c</fullName>
        <label>Content Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Indicator Value Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512780577_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentTaskContentDocument_Conten_rel</label>
        <referenceTo>ssot__ContentDocument__dlm</referenceTo>
        <relationshipLabel>AssessmentTaskContentDocument_Conten_rel</relationshipLabel>
        <relationshipName>rel_1739512780577_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744864386003_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentTaskContentDocument_Conten_rel</label>
        <referenceTo>ssot__Referral__dlm</referenceTo>
        <relationshipLabel>AssessmentTaskContentDocument_Conten_rel</relationshipLabel>
        <relationshipName>rel_1744864386003_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744864388113_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentTaskContentDocument_Conten_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>AssessmentTaskContentDocument_Conten_rel</relationshipLabel>
        <relationshipName>rel_1744864388113_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>